Fixed some whitespaces in main nav.

--- a/template-src/scss/main/_basics.scss
+++ b/template-src/scss/main/_basics.scss
@@ -121,6 +121,9 @@ html {
     @include text-lead;
 }
 
+.hyphens-text {
+    @include use-hyphens-text;
+}
 
 // Headings
 h1, h2, h3, h4, h5, h6 {
